# simpress

./: .dockerignore  .gitignore  Dockerfile  README.md  Untitled.ipynb  config.py  config_exemplo.py  consulta_banco.py  df_remoto.csv  erros_log.csv  main.py  mkdocs.yml  popula_banco.py  pyproject.toml  repository_gestao_impressoras.py  requirements.txt  setup.sh  simpress_print.py  testes.py
app/: .env  config.py  crud.py  database.py  models.py  queries.py  repository_gestao_impressoras.py  webservice.py
credenciais/: .env.exemplo  config.py  config_exemplo.py
docs/: index.md
scripts/: analise_graficos.py  analise_graficos_2.py  cria_pastas.py  exclue_dados.py  inputa_dados.py  prepara_dados.py  push_to_multiple_remotes.sh
site/: 404.html  index.html
testes/: analise_arquivo_final.ipynb  analise_graficos.py  analise_graficos_2.py  conversao_dataframe.ipynb  conversao_dataframe.py  funcoes_analise_arquivo_final.ipynb  preenche_dados.ipynb  preenche_dados.py  preenche_dados_v2.py  preenche_data_final_jan.ipynb  simpress.ipynb  teste.py  teste_tkinter.py
testes/.ipynb_checkpoints/: analise_arquivo_final-checkpoint.ipynb  funcoes_analise_arquivo_final-checkpoint.ipynb
utils/: consulta_banco.py  popula_banco.py  utils.py
