[tool.poetry]
name = "simpress"
version = "0.1.0"
description = "Contador de impressoes (Simpress)"
authors = ["Marcio Freitas <msfreitas@tre-ba.jus.br>"]
license = "MIT"
maintainers = ["Marcio Freitas <msfreitas@tre-ba.jus.br>"]
readme = "README.md"
repository = "http://gitlab.tre-ba.jus.br/automacao/simpress"


[tool.poetry.dependencies]
python = "^3.10.10"
attrs = "^23.1.0"
certifi = "^2023.11.17"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
cryptography = "^41.0.7"
greenlet = "^3.0.1"
idna = "^3.6"
isodate = "^0.6.1"
lxml = "^4.9.3"
numpy = "^1.26.2"
oracledb = "^1.4.2"
pandas = "^2.1.3"
platformdirs = "^4.1.0"
pycparser = "^2.21"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
pytz = "^2023.3.post1"
requests = "^2.31.0"
requests-file = "^1.5.1"
requests-toolbelt = "^1.0.0"
six = "^1.16.0"
SQLAlchemy = "^2.0.23"
typing-extensions = "^4.8.0"
tzdata = "^2023.3"
urllib3 = "^2.1.0"
zeep = "^4.2.1"
